@@ -65,6 +65,7 @@
 - Modules: Recategorized HASH_CATEGORY option in various modules
 - Modules: Added hash categories HASH_CATEGORY_IMS and HASH_CATEGORY_CRYPTOCURRENCY_WALLET
 - Modules: Changed hash category of Python passlib from HASH_CATEGORY_GENERIC_KDF to HASH_CATEGORY_FRAMEWORK
+- Unit-Tests: Added missing support for OPTS_TYPE_LOOP_PREPARE, OPTS_TYPE_LOOP_PREPARE2 and salt_repeats in self-test
 - Unit-Tests: Added missing unit-test for Stargazer Stellar Wallet XLM
 
 * changes v6.2.0 -> v6.2.1
